force-app/main/default/objects/Animals__c/Animals__c.object-meta.xml
<CustomObject>
    <label>Animals</label>
    <nameField>
        <displayFormat>AN-{00000}</displayFormat>
        <label>Animal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Animals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>