force-app/main/default/objects/Animals__c/fields/Animal_Associated_cost_Year2__c.field-meta.xml
<CustomField>
    <fullName>Animal_Associated_cost_Year2__c</fullName>
    <label>Animal Associated cost Year2</label>
    <summarizedField>Animal_Associated_costs__c.Year_2_Cost__c</summarizedField>
    <summaryForeignKey>Animal_Associated_costs__c.Animals__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>