force-app/main/default/objects/Animals__c/fields/Animal_Associated_cost_Year3__c.field-meta.xml
<CustomField>
    <fullName>Animal_Associated_cost_Year3__c</fullName>
    <label>Animal Associated cost Year3</label>
    <summarizedField>Animal_Associated_costs__c.Year_3_Cost__c</summarizedField>
    <summaryForeignKey>Animal_Associated_costs__c.Animals__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>