force-app/main/default/objects/Animals__c/fields/Animal_Exp_Procedure_Cost_Justification__c.field-meta.xml
<CustomField>
    <fullName>Animal_Exp_Procedure_Cost_Justification__c</fullName>
    <label>Animal Exp-Procedure Cost Justification</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>