force-app/main/default/objects/Animals__c/fields/Animal_species__c.field-meta.xml
<CustomField>
    <fullName>Animal_species__c</fullName>
    <label>Animal species</label>
    <length>80</length>
    <type>Text</type>
</CustomField>