force-app/main/default/objects/Animals__c/fields/Any_procedures_of_substantial_Severity__c.field-meta.xml
<CustomField>
    <fullName>Any_procedures_of_substantial_Severity__c</fullName>
    <inlineHelpText>Provide details of any procedures of substantial or moderate severity. (250 words)*</inlineHelpText>
    <label>Any procedures of substantial Severity</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>