force-app/main/default/objects/Animals__c/fields/biohazards_associated__c.field-meta.xml
<CustomField>
    <fullName>biohazards_associated__c</fullName>
    <inlineHelpText>What biohazards are associated with animal experimentation and what safety precautions are required?</inlineHelpText>
    <label>biohazards associated</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>