force-app/main/default/objects/Animals__c/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Budget</label>
    <referenceTo>Budget__c</referenceTo>
    <relationshipLabel>Animals</relationshipLabel>
    <relationshipName>Animals</relationshipName>
    <type>Lookup</type>
</CustomField>