force-app/main/default/objects/Animals__c/fields/CCSEA_registration_number__c.field-meta.xml
<CustomField>
    <fullName>CCSEA_registration_number__c</fullName>
    <inlineHelpText>Provide the CCSEA registration number for the institution where the animal work will be conducted. (200 Words)*</inlineHelpText>
    <label>CCSEA registration number</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>