force-app/main/default/objects/Animals__c/fields/Describe_procedure_to_be_implemented__c.field-meta.xml
<CustomField>
    <fullName>Describe_procedure_to_be_implemented__c</fullName>
    <inlineHelpText>Describe procedures to be implemented to minimize stress and pain to the animal</inlineHelpText>
    <label>Describe procedure to be implemented</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>