force-app/main/default/objects/Animals__c/fields/Exprmnt_on_animals_terminal__c.field-meta.xml
<CustomField>
    <fullName>Exprmnt_on_animals_terminal__c</fullName>
    <inlineHelpText>Are the experiments on the animals terminal or will the animal be monitored post procedure?</inlineHelpText>
    <label>Exprmnt on animals terminal</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>