force-app/main/default/objects/Animals__c/fields/if_not_reviewed_by_IAEC_With_Timelines__c.field-meta.xml
<CustomField>
    <fullName>if_not_reviewed_by_IAEC_With_Timelines__c</fullName>
    <inlineHelpText>If not, list the regulatory bodies responsible for ethical review of the project and indicate the expected timeline. Any additional regulatory approval obtained or anticipated may be listed.</inlineHelpText>
    <label>if not reviewed by IAEC, With Timelines</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>