force-app/main/default/objects/Animals__c/fields/Maintenance_Cost_Total__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Cost_Total__c</fullName>
    <formula>BLANKVALUE(Maintenance_cost_Year1__c, 0) +
BLANKVALUE(Maintenance_cost_Year2__c, 0) +
BLANKVALUE(Maintenance_cost_Year3__c, 0) +
BLANKVALUE(Maintenance_cost_Year4__c, 0) +
BLANKVALUE(Maintenance_cost_Year5__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maintenance Cost Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>