force-app/main/default/objects/Animals__c/fields/My_Proposal_Involves__c.field-meta.xml
<CustomField>
    <fullName>My_Proposal_Involves__c</fullName>
    <label>My Proposal Involves</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>The Use of animals</fullName>
            </value>
            <value>
                <fullName>The Use of animal tissue</fullName>
            </value>
            <value>
                <fullName>The Use of non-human stem cells</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>