force-app/main/default/objects/Animals__c/fields/Other_Animal_Names_to_be_Used__c.field-meta.xml
<CustomField>
    <fullName>Other_Animal_Names_to_be_Used__c</fullName>
    <label>Other Animal Names to be Used</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>