force-app/main/default/objects/Animals__c/fields/Proposal_Carried_out_on_animals__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Carried_out_on_animals__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does your proposal include procedures to be carried out on animals which require formal approval?</inlineHelpText>
    <label>Proposal Carried out on animals</label>
    <type>Checkbox</type>
</CustomField>