force-app/main/default/objects/Animals__c/fields/Proposed_source_of_the_animals__c.field-meta.xml
<CustomField>
    <fullName>Proposed_source_of_the_animals__c</fullName>
    <inlineHelpText>Proposed source of the animals. (200 Words)*</inlineHelpText>
    <label>Proposed source of the animals</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>