force-app/main/default/objects/Animals__c/fields/Protocol_for_waste_management__c.field-meta.xml
<CustomField>
    <fullName>Protocol_for_waste_management__c</fullName>
    <label>Protocol for waste management</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>