force-app/main/default/objects/Animals__c/fields/Provide_details_of_source_of_stem_cellst__c.field-meta.xml
<CustomField>
    <fullName>Provide_details_of_source_of_stem_cellst__c</fullName>
    <label>Provide details of source of stem cellst</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>