force-app/main/default/objects/Animals__c/fields/Purchase_Cost_Total__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Cost_Total__c</fullName>
    <formula>BLANKVALUE(Purchase_cost_Year1__c, 0) +
BLANKVALUE(Purchase_cost_Year2__c, 0) +
BLANKVALUE(Purchase_cost_Year3__c, 0) +
BLANKVALUE(Purchase_cost_Year4__c, 0) +
BLANKVALUE(Purchase_cost_Year5__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchase Cost Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>