force-app/main/default/objects/Animals__c/fields/Purchase_cost_Year2__c.field-meta.xml
<CustomField>
    <fullName>Purchase_cost_Year2__c</fullName>
    <label>Purchase cost Year2</label>
    <summarizedField>Animal_Species__c.Purchase_Total_cost__c</summarizedField>
    <summaryFilterItems>
        <field>Animal_Species__c.Purchase_Year_Required__c</field>
        <operation>equals</operation>
        <value>2</value>
    </summaryFilterItems>
    <summaryForeignKey>Animal_Species__c.Animals__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>