force-app/main/default/objects/Animals__c/fields/Reviewed_by_IAEC_with_timelines__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_by_IAEC_with_timelines__c</fullName>
    <inlineHelpText>Specify if the project has been reviewed/will be reviewed by IAEC, with timelines.</inlineHelpText>
    <label>Reviewed by IAEC, with timelines</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>