force-app/main/default/objects/Animals__c/fields/Sample_size_justification_and_Power__c.field-meta.xml
<CustomField>
    <fullName>Sample_size_justification_and_Power__c</fullName>
    <inlineHelpText>Sample size justification and Power calculations with exclusion and inclusion criteria including Inclusion and exclusion criteria</inlineHelpText>
    <label>Sample size justification Power</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>