force-app/main/default/objects/Animals__c/fields/Severity_of_the_procedures_on_the_animal__c.field-meta.xml
<CustomField>
    <fullName>Severity_of_the_procedures_on_the_animal__c</fullName>
    <label>Severity of the procedures on the animal</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>