force-app/main/default/objects/Animals__c/fields/Species_used__c.field-meta.xml
<CustomField>
    <fullName>Species_used__c</fullName>
    <label>Species used</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rodents</fullName>
            </value>
            <value>
                <fullName>Primate</fullName>
            </value>
            <value>
                <fullName>Equidae</fullName>
            </value>
            <value>
                <fullName>Genetically Altered</fullName>
            </value>
            <value>
                <fullName>Other Animals</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>