force-app/main/default/objects/Animals__c/fields/Total_maintenance_and_procedure_cost__c.field-meta.xml
<CustomField>
    <fullName>Total_maintenance_and_procedure_cost__c</fullName>
    <label>Total maintenance and procedure cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>