force-app/main/default/objects/Animals__c/fields/Total_number_to_be_purchased__c.field-meta.xml
<CustomField>
    <fullName>Total_number_to_be_purchased__c</fullName>
    <label>Total number to be purchased</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>