force-app/main/default/objects/Animals__c/fields/Total_purchase_cost__c.field-meta.xml
<CustomField>
    <fullName>Total_purchase_cost__c</fullName>
    <label>Purchase cost for each</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>