force-app/main/default/objects/Animals__c/fields/Why_is_animal_use_necessary__c.field-meta.xml
<CustomField>
    <fullName>Why_is_animal_use_necessary__c</fullName>
    <inlineHelpText>Why is animal use necessary: are there any other possible approaches?</inlineHelpText>
    <label>Why is animal use necessary</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>