force-app/main/default/objects/Animals__c/fields/Why_is_are_the_species_most_appropriate__c.field-meta.xml
<CustomField>
    <fullName>Why_is_are_the_species_most_appropriate__c</fullName>
    <label>Why is/are the species most appropriate</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>