force-app/main/default/objects/Animals__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Proposal__c</columns>
    <columns>Budget__c</columns>
    <columns>Animal_species__c</columns>
    <columns>Species_used__c</columns>
    <columns>Total__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>